# cpp_playground

./: .clang-format  .cmake-format.yaml  .gitmodules  README.md
attributes_example/: CMakeLists.txt
barrier_examples/: CMakeLists.txt
ceres_solver_example/: CMakeLists.txt
ceres_solver_examples/: CMakeLists.txt
ceres_solver_examples/cmake/Hunter/: config.cmake
ceres_solver_examples/include/: matplotlibcpp.h  polynomial.h
ceres_solver_examples/src/: hello_world.cpp  polynomial_trajectory_generator.cpp  quintic_polynomial.cpp
conan_catkin_example/: README.md
conan_cmake_example/: CMakeLists.txt  README.md  conanfile.txt
conan_cmake_example/src/: main.cpp  mlpack_example.cpp
conan_example/: CMakeLists.txt  README.md
conan_example/src/: main.cpp
cpp_practices/bug_examples/: CMakeLists.txt
cpp_practices/bug_examples/src/: dead_condition_variable.cpp
cpp_practices/design_pattern_in_modern_cpp/: CMakeLists.txt
cpp_practices/design_pattern_in_modern_cpp/src/: builder.cpp  crtp.cpp  decorator_mixins.cpp  factory.cpp  factory_experimental.cpp  factory_variant.cpp  joshua_bloch_builder.cpp  visitor.cpp
cpp_practices/expression_templates/: CMakeLists.txt  README.org
cpp_practices/expression_templates/include/: array.h  demangle.h  operators.h  sarray.h  scaler.h  traits.h
cpp_practices/expression_templates/src/: expression_templates.cpp
cpp_practices/expression_templates/test/: CMakeLists.txt  main.cpp
cpp_practices/lock_free_structure/: CMakeLists.txt
cpp_practices/lock_free_structure/include/: triple_buffer.h  triple_buffer_so.h
cpp_practices/lock_free_structure/src/: triple_buffer_example.cpp  triple_buffer_so_example.cpp
cpp_practices/time/: CMakeLists.txt
cpp_practices/time/src/: locking_test.cpp  timing_test.cpp
cpp_practices/tricks/: CMakeLists.txt
cpp_practices/tricks/cmake/: FetchCatch2.cmake
cpp_practices/tricks/include/: delegate.h  indices_trick_own.h  indices_trick_std.h  scope_action.h  struct_magic.h  tuple_get_variant.hpp  tuple_transform.h
cpp_practices/tricks/src/: bitset_to_int.cpp  char.cpp  defer.cpp  delegate_example.cpp  exit_scope.cpp  flatten_tuple.cpp  indices_trick.cpp  integer_to_bool_array.cpp  is_valid.cpp  longjmp.cpp  perfect_forwarding.cpp  reservoir_sampling.cpp  sfinae.cpp  siglongjmp.cpp  struct_magic_example.cpp  template_specialization_type_list.cpp  type_erasure.cpp  unwrap_reference.cpp
cpp_practices/tricks/test/: CMakeLists.txt  delegate_benchmark_test.cpp  tests_main.cpp
csv_reader/: CMakeLists.txt
csv_reader/include/: indices_trick_std.h
csv_reader/include/csv_reader/: csv_reader.h
csv_reader/src/: csv_reader_dlib_ex.cpp  csv_reader_ex.cpp
defer/: CMakeLists.txt
design_pattern_in_modern_cpp/: CMakeLists.txt
design_pattern_in_modern_cpp/src/: builder.cpp  decorator_mixins.cpp  factory.cpp  factory_experimental.cpp  type.hpp  visitor.cpp
grpc_example/: CMakeLists.txt  greeter_client.cpp  greeter_server.cpp  main.cpp
grpc_example/cmake/: tools.cmake
grpc_example/cmake/Hunter/: config.cmake
grpc_example/messages/: CMakeLists.txt
grpc_example/src/route_guide/: helper.cpp  route_guide_server.cpp
hunter_cmake_example/: CMakeLists.txt
hunter_cmake_example/src/: gui_api_ex.cpp
imgui_example/: CMakeLists.txt
impui_example/: CMakeLists.txt
indices_trick/: CMakeLists.txt
libtorch_example/: CMakeLists.txt
libtorch_example/src/: dcgan_example.cpp  function_approx.cpp
matplotlib_cpp/: CMakeLists.txt
nameof/: CMakeLists.txt
ncurses_keyboard/: CMakeLists.txt
package_managers/hunter_cmake_example/: CMakeLists.txt  README.md
package_managers/hunter_cmake_example/cmake/Hunter/: config.cmake
package_managers/hunter_cmake_example/src/: dlib_gui_ex.cpp
ranges_v3_examples/: CMakeLists.txt
self_brewed_utils/realtime_executor/: CMakeLists.txt
sfinae_example/: CMakeLists.txt
sfinae_example/src/: is_convertable.cpp  sfinae_example.cpp
smart_rate/: CMakeLists.txt  conanfile.txt
smart_rate/src/: krls_rate_example.cpp  main.cpp
third_party_examples/beast/: CMakeLists.txt  websocket_client.cpp
third_party_examples/beast/cmake/Hunter/: config.cmake
third_party_examples/behaviortree_cpp/: CMakeLists.txt
third_party_examples/behaviortree_cpp/src/: create_a_tree.cpp
third_party_examples/boost/: CMakeLists.txt  async_compress_command_output.cpp  child_input_stream.cpp  compress_command_output.cpp  filter_stream.cpp  incremental_number_printer.sh  piped_process.cpp  single_process.cpp  two_processes.cpp
third_party_examples/box2d_example/: CMakeLists.txt
third_party_examples/box2d_example/include/box2dsim/: box2dsim.h
third_party_examples/box2d_example/include/draw/: settings.h
third_party_examples/box2d_example/include/imgui_impl/: imgui_impl_glfw.h  imgui_impl_opengl3.h
third_party_examples/box2d_example/src/: box2dsim.cpp  box2dsim.h  draw.cpp  draw.h  hello.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  settings.cpp
third_party_examples/bullet_examples/: CMakeLists.txt  boo.cpp
third_party_examples/cpprestsdk/: CMakeLists.txt  bing_search.cpp
third_party_examples/drake_examples/: CMakeLists.txt  install_drake.sh
third_party_examples/drake_examples/acrobot/: CMakeLists.txt  acrobot_lqr.cpp  acrobot_passive.cpp
third_party_examples/drake_examples/cart_pole/: CMakeLists.txt  cart_pole_lqr.cpp  cart_pole_passive_simulation.cpp  cart_pole_pid.cpp
third_party_examples/drake_examples/hello_world/: CMakeLists.txt  simple_continuous_time_system.cpp  simple_discrete_time_system.cpp
third_party_examples/drake_examples/iiwa/: CMakeLists.txt  iiwa_common.h  iiwa_lcm.cpp  iiwa_simulation.cpp
third_party_examples/drake_examples/panda/: CMakeLists.txt  iiwa_common.cpp  iiwa_lcm.h  iiwa_simulation.cpp  kuka_torque_controller.cpp  kuka_torque_controller.h  panda_simulation.cpp
third_party_examples/drake_examples/panda/robots/: panda_arm.urdf
tricks/: CMakeLists.txt
tricks/include/: indices_trick_std.h  struct_magic.h  tuple_get_variant.hpp
tricks/src/: indices_trick.cpp  magic_get_example.cpp  struct_magic_example.cpp  type.hpp
(+192 files in other folders)
