cmake_minimum_required(VERSION 2.8.3)
project(lock_free_structure)

find_package(Threads REQUIRED)
add_library(lock_free_structure INTERFACE)
target_include_directories(lock_free_structure INTERFACE include)
target_link_libraries(lock_free_structure INTERFACE Threads::Threads)
target_compile_features(lock_free_structure INTERFACE cxx_std_17)

add_executable(hello_lock_free src/hello_lock_free.cpp)
target_link_libraries(hello_lock_free lock_free_structure)

add_executable(triple_buffer_so_example src/triple_buffer_so_example.cpp)
target_link_libraries(triple_buffer_so_example lock_free_structure)

add_executable(triple_buffer_example src/triple_buffer_example.cpp)
target_link_libraries(triple_buffer_example lock_free_structure)
